# deepseek-mcp

./: README.md  SECURITY.md  config.example.toml  pyproject.toml
src/deepseek_worker/: __init__.py  core.py  jobs.py  server.py
tests/: mcp_smoke.py  test_core.py  test_jobs.py
